--- a/src/TeachMeSkills/Lesson49SpringDataJPA/src/main/resources/templates/reg.html
+++ b/src/TeachMeSkills/Lesson49SpringDataJPA/src/main/resources/templates/reg.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form action="user/reg" method="post">
+<form action="/user/reg" method="post">
     <input type="text" name="name" placeholder="Name">
     <input type="text" name="username" placeholder="userName">
     <input type="text" name="password" placeholder="password">
