add css and js files

--- a/src/TeachMeSkills/Lesson49SpringDataJPA/src/main/resources/templates/index.html
+++ b/src/TeachMeSkills/Lesson49SpringDataJPA/src/main/resources/templates/index.html
@@ -26,8 +26,8 @@
         </form>
         <form class="login-form" method="post">
             <h2></i> Login</h2>
-            <input type="text" placeholder="Username" required />
-            <input type="password" placeholder="Password" required/>
+            <input type="text" name="username" placeholder="Username" required />
+            <input type="password" name="password" placeholder="Password" required/>
             <a class="btn" href="#">
                 <span></span>
                 <span></span>
