--- a/src/TeachMeSkills/EnglishBook/src/main/resources/templates/home.html
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/templates/home.html
@@ -22,5 +22,32 @@
             <button class="navbar-btn">Login</button>
         </nav>
     </header>
+<!--    Form section-->
+    <div class="form-container">
+        <span class="close-icon"></span>
+        <div class="formbox">
+            <h2>Login</h2>
+            <form action="#">
+                <div class="input-box">
+                    <span class="icon"></span>
+                    <input type="email" required>
+                    <label for="email">Email</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"></span>
+                    <input type="password" required>
+                    <label for="password">Password</label>
+                </div>
+                <div class="forgot-remember">
+                    <label for=""><input type="checkbox"> Remember me</label>
+                    <a href="#">Forget password?</a>
+                </div>
+                <button class="btn" type="submit">Submit</button>
+                <div class="reg-login">
+                    <p>Don't have an account? <a href="#" class="reg-link"> Register </a></p>
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
