--- a/src/TeachMeSkills/EnglishBook/src/main/resources/static/css/styles.css
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/static/css/styles.css
@@ -3,15 +3,15 @@ body{
     display: flex;
     justify-content: center;
     align-content: center;
-    min-height: 100vh;
+    min-height: 80vh;
     background: green;
 }
 li{
     list-style: none;
 }
 header{
-    width: 100%;
-    padding: 20px 100px;
+    width: 90%;
+    padding: 20px 80px;
     display: flex;
     position: fixed;
     top: 0;
@@ -19,7 +19,6 @@ header{
     justify-content: space-between;
     align-items: center;
     z-index: 1;
-
 }
 .logo{
     font-size: 2em;
@@ -50,12 +49,18 @@ header{
     content: '';
     position: absolute;
     left: 0;
-    bottom: 6px;
+    bottom: -6px;
     width: 100%;
     height: 3px;
+    background: white;
+    border-radius: 3px;
     transform: scaleX(0);
     transform-origin: right;
     transition: trasform .5s;
+}
+.navbar a:hover::after{
+    transform-origin: left;
+    transform: scaleX(1);
 }
 .navbar-btn{
     width: 140px;
@@ -65,5 +70,19 @@ header{
     outline: none;
     border-radius: 6px;
     cursor: pointer;
+    margin-left: 40px;
 
+}
+/*form section*/
+.form-container{
+    position: relative;
+    width: 400px;
+    height: 440px;
+    background: red;
+    border: 2px solid rgba(255,255,255, .5);
+    border-radius: 20px;
+    box-shadow: 0 0 30px rgba(0,0,0, .5);
+    display: flex;
+    align-items: center;
+    margin-top: 170px;
 }
