--- a/src/TeachMeSkills/EnglishBook/src/main/resources/static/css/styles.css
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/static/css/styles.css
@@ -86,3 +86,8 @@ header{
     align-items: center;
     margin-top: 170px;
 }
+/*position input places(email, password) in form container*/
+.formbox{
+    width: 100%;
+    padding: 40px;
+}
