--- a/src/TeachMeSkills/EnglishBook/src/main/resources/templates/home.html
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/templates/home.html
@@ -24,17 +24,17 @@
     </header>
 <!--    Form section-->
     <div class="form-container">
-        <span class="close-icon"></span>
+        <span class="close-icon"><ion-icon name="close-outline"></ion-icon></span>
         <div class="formbox">
             <h2>Login</h2>
             <form action="#">
                 <div class="input-box">
-                    <span class="icon"></span>
+                    <span class="icon"><ion-icon name="mail-outline"></ion-icon></span>
                     <input type="email" required>
                     <label for="email">Email</label>
                 </div>
                 <div class="input-box">
-                    <span class="icon"></span>
+                    <span class="icon"><ion-icon name="lock-closed-outline"></ion-icon></span>
                     <input type="password" required>
                     <label for="password">Password</label>
                 </div>
@@ -49,5 +49,8 @@
             </form>
         </div>
     </div>
+<!--ionicons fonts-->
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
