--- a/src/TeachMeSkills/EnglishBook/src/main/resources/static/css/styles.css
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/static/css/styles.css
@@ -85,9 +85,112 @@ header{
     display: flex;
     align-items: center;
     margin-top: 170px;
+    overflow: auto;
 }
 /*position input places(email, password) in form container*/
 .formbox{
     width: 100%;
     padding: 40px;
+}
+.close-icon{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 40px;
+    height: 40px;
+    background: #1e2021;
+    font-size: 2em;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom-left-radius: 20px ;
+    cursor: pointer;
+    z-index: 1;
+}
+.close-icon:hover{
+    background: #229dde;
+}
+.formbox h2{
+    font-size: 2em;
+    color: #41b3ef;
+}
+.input-box{
+    position: relative;
+    width: 100%;
+    height: 50px;
+    border-bottom: 2px solid black;
+    margin: 30px 0;
+}
+.input-box label{
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    font-size: 1em;
+    color: #182b2f;
+    font-weight: 500;
+    pointer-events: none;
+    transition: .5s;
+}
+input-box input{
+    width: 100%;
+    height: 100%;
+    color: #182a33;
+    background: transparent;
+    border: none;
+    font-size: 1em;
+    font-weight: 600;
+    padding: 0 35px 0 5px;
+}
+.input-box input:focus~label,
+.input-box input:valid~label{
+    top:-5px;
+    color: #182a33;
+}
+.input-box .icon{
+    position: absolute;
+    right: 8px;
+    font-size: 1.2em;
+    color: #182a33;
+    line-height: 57px;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1em;
+    font-weight: 600;
+}
+.forget-remember{
+    font-size: .9em;
+    color: #182a33;
+    font-weight: 500;
+    margin: -15px 0 15px;
+    display: flex;
+    justify-content: space-between;
+}
+.forget-remember:hover{
+    color: #102741;
+}
+.forget-remember label input{
+    accent-color: cornflowerblue;
+    text-decoration: none;
+}
+.forget-remember a:hover{
+    text-decoration: underline;
+    color: #2966a7;
+}
+.btn{
+    width: 100%;
+    height: 45px;
+    background: #182a33;
+    border: none;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1em;
+    color: white;
+    font-weight: 500;
+}
+.btn:hover{
+    background: darkcyan;
 }
