--- a/src/TeachMeSkills/EnglishBook/src/main/resources/templates/home.html
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/templates/home.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" th:href="@{/css/styles.css}">
+
 </head>
-<body>
+<body style="background: url('/images/library.jpg') no-repeat center center; background-size: cover;">
 <!--        <navbar selection>-->
     <header>
-        <h2 class="logo"> logo </h2>
+        <h2 class="logo"> My Library </h2>
 <!--        navbar checkbox & hamburger-->
         <input type="checkbox" id="checkbox_toggle">
         <label for="checkbox_toggle" class="hamburger">&#9776</label>
@@ -19,7 +20,7 @@
             <a href="reg.html">Registration</a>
             <a href="auth.html">Authorisation</a>
             <a href="auth.html">Library</a>
-            <button class="navbar-btn">Login</button>
+            <button class="navbar-btn a">Login</button>
         </nav>
     </header>
 <!--    Form section-->
