--- a/src/TeachMeSkills/EnglishBook/src/main/resources/static/css/styles.css
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/static/css/styles.css
@@ -4,7 +4,7 @@ body{
     justify-content: center;
     align-content: center;
     min-height: 80vh;
-
+    background: url("static/images/library.jpg") no-repeat;
 }
 li{
     list-style: none;
@@ -62,16 +62,19 @@ header{
     transform-origin: left;
     transform: scaleX(1);
 }
-.navbar-btn{
+.navbar-btn {
     width: 140px;
     height: 50px;
     background: transparent;
     border: 2px solid rgba(255,255,255,.5);
+    color: white;
     outline: none;
     border-radius: 6px;
     cursor: pointer;
     margin-left: 40px;
-
+}
+.navbar-btn:hover{
+    background: darkcyan;
 }
 /*form section*/
 .form-container{
@@ -79,7 +82,7 @@ header{
     width: 400px;
     height: 480px;
     background: transparent;
-    backdrop-filter: blur();
+    backdrop-filter: blur(10px);
     border: 2px solid rgba(255,255,255, .5);
     border-radius: 20px;
     box-shadow: 0 0 30px rgba(0,0,0, .5);
@@ -120,16 +123,16 @@ header{
     position: relative;
     width: 100%;
     height: 50px;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #fcfcfc;
     margin: 20px 0;
 }
 .input-box label{
     position: absolute;
-    top: 78%;
+    top: 70%;
     left: 5px;
     transform: translateY(-80%);
-    font-size: 1em;
-    color: #182b2f;
+    font-size: 1.2em;
+    color: #ffffff;
     font-weight: 500;
     pointer-events: none;
     transition: .5s;
@@ -147,8 +150,8 @@ header{
 }
 .input-box input:focus~label,
 .input-box input:valid~label{
-    top:-5px;
-    color: #182a33;
+    top: 1px;
+    color: #29acf1;
 }
 .input-box .icon{
     position: absolute;
@@ -159,19 +162,18 @@ header{
     background: transparent;
     border: none;
     outline: none;
-    font-size: 1em;
     font-weight: 600;
 }
 .forget-remember{
     font-size: .9em;
-    color: #182a33;
+    color: #f5f5f5;
     font-weight: 500;
-    margin: -15px 0 15px;
+    margin: 15px 0 15px;
     display: flex;
     justify-content: space-between;
 }
 .forget-remember:hover{
-    color: #102741;
+    color: #ffffff;
 }
 .forget-remember label input{
     accent-color: cornflowerblue;
@@ -192,6 +194,7 @@ header{
     font-size: 1em;
     color: white;
     font-weight: 500;
+    margin: 15px 0;
 }
 .btn:hover{
     background: darkcyan;
@@ -201,7 +204,7 @@ header{
     color: #021c30;
     text-align: center;
     font-weight: 500;
-    margin: 25px 0 10px;
+    margin: 15px 0 10px;
 }
 .reg-login p a{
     color: #162938;
