--- a/src/TeachMeSkills/EnglishBook/src/main/resources/templates/home.html
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/templates/home.html
@@ -39,7 +39,7 @@
                     <input type="password" required>
                     <label for="password">Password</label>
                 </div>
-                <div class="forgot-remember">
+                <div class="forget-remember">
                     <label for=""><input type="checkbox"> Remember me</label>
                     <a href="#">Forget password?</a>
                 </div>
