--- a/src/TeachMeSkills/EnglishBook/src/main/resources/static/css/styles.css
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/static/css/styles.css
@@ -79,8 +79,8 @@ header{
 /*form section*/
 .form-container{
     position: relative;
-    width: 400px;
-    height: 480px;
+    width: 440px;
+    height: 513px;
     background: transparent;
     backdrop-filter: blur(10px);
     border: 2px solid rgba(255,255,255, .5);
@@ -95,6 +95,9 @@ header{
 .formbox{
     width: 100%;
     padding: 40px;
+}
+.formbox.Registration{
+    display: none;
 }
 .close-icon{
     position: absolute;
@@ -157,7 +160,7 @@ header{
     position: absolute;
     right: 8px;
     font-size: 1.2em;
-    color: #182a33;
+    color: #ffffff;
     line-height: 57px;
     background: transparent;
     border: none;
@@ -236,6 +239,10 @@ header{
         background: transparent;
         transition: .3s ease;
     }
+    .navbar-btn{
+        margin-left: 20px;
+        font-size: .9em;
+    }
 
     #checkbox_toggle:checked ~ .navbar {
         display: inline-block;
@@ -259,7 +266,7 @@ header{
         font-size: 2em;
         z-index: 99;
     }
-
+    /*form section*/
     .form-container {
         position: relative;
         top: 50px;
@@ -274,5 +281,5 @@ header{
         height: 45px;
         margin-left: 5px;
     }
-    
+
 }
