--- a/src/TeachMeSkills/EnglishBook/src/main/resources/static/css/styles.css
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/static/css/styles.css
@@ -3,7 +3,7 @@ body{
     display: flex;
     justify-content: center;
     align-content: center;
-    min-height: 80vh;
+    min-height: 97vh;
     background: url("static/images/library.jpg") no-repeat;
     background-size: cover;
 }
@@ -80,7 +80,7 @@ header{
 .form-container{
     position: relative;
     width: 440px;
-    height: 513px;
+    height: 455px;
     background: transparent;
     backdrop-filter: blur(10px);
     border: 2px solid rgba(255,255,255, .5);
@@ -88,16 +88,22 @@ header{
     box-shadow: 0 0 30px rgba(0,0,0, .5);
     display: flex;
     align-items: center;
-    margin-top: 170px;
-    overflow: auto;
+    margin-top: 115px;
+    transition: transform .5s ease ,height .2s ease;
+    overflow: hidden;
+    transform: scale(0);
 }
-/*position input places(email, password) in form container*/
+.form-container.active-popup{
+    transform: scale(1);
+}
+
 .formbox{
     width: 100%;
     padding: 40px;
-}
-.formbox.Registration{
     display: none;
+}
+.formbox.active{
+    display: block;
 }
 .close-icon{
     position: absolute;
@@ -127,7 +133,7 @@ header{
     width: 100%;
     height: 50px;
     border-bottom: 2px solid #fcfcfc;
-    margin: 20px 0;
+    margin: 17px 0;
 }
 .input-box label{
     position: absolute;
@@ -143,7 +149,7 @@ header{
 .input-box input{
     width: 100%;
     height: 100%;
-    color: #021c30;
+    color: #f6f4f4;
     background: transparent;
     border: none;
     outline: none;
@@ -183,11 +189,11 @@ header{
     text-decoration: none;
 }
 .forget-remember a{
-    color: #29acf1;
+    color: #76c2f1;
 }
 .forget-remember a:hover{
     text-decoration: underline;
-    color: #2966a7;
+    color: #4fa0f1;
 }
 .btn{
     width: 100%;
@@ -200,7 +206,7 @@ header{
     font-size: 1em;
     color: white;
     font-weight: 500;
-    margin: 15px 0;
+    margin: 5px 0;
 }
 .btn:hover{
     background: darkcyan;
