--- a/src/TeachMeSkills/EnglishBook/src/main/resources/templates/home.html
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/templates/home.html
@@ -13,10 +13,9 @@
     <input type="checkbox" id="checkbox_toggle">
     <label for="checkbox_toggle" class="hamburger">&#9776</label>
     <nav class="navbar">
-        <a href="home.html">HomePage</a>
-        <a href="reg.html">Registration</a>
-        <a href="auth.html">Authorisation</a>
-        <a href="auth.html">Library</a>
+        <a href="#">HomePage</a>
+        <a href="#">Library</a>
+        <a href="#">Contact</a>
         <button class="navbar-btn a">Login</button>
     </nav>
 </header>
