--- a/src/TeachMeSkills/EnglishBook/src/main/resources/templates/home.html
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,15 +24,15 @@
     <span class="close-icon"><ion-icon name="close-outline"></ion-icon></span>
     <div class="formbox Login active" id="loginForm">
         <h2>Login</h2>
-        <form action="#">
+        <form th:action="@{/home/reg}" th:object="${newRegUser}" method="post">
             <div class="input-box">
                 <span class="icon"><ion-icon name="mail-outline"></ion-icon></span>
-                <input type="email" required>
+                <input type="text" th:field="*{email}" required>
                 <label for="email">Email</label>
             </div>
             <div class="input-box">
                 <span class="icon"><ion-icon name="lock-closed-outline"></ion-icon></span>
-                <input type="password" required>
+                <input type="password" th:field="*{password}" required>
                 <label for="password">Password</label>
             </div>
             <div class="forget-remember">
@@ -47,20 +47,20 @@
     </div>
     <div class="formbox Registration" id="registrationForm" style="display: none;">
         <h2>Registration</h2>
-        <form action="reg.html">
+        <form th:action="@{/home/reg}" th:object="${newRegUser}" method="post">
             <div class="input-box">
                 <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
-                <input type="text" required>
+                <input type="text" th:field="*{username}" required>
                 <label for="email">Username</label>
             </div>
             <div class="input-box">
                 <span class="icon"><ion-icon name="mail-outline"></ion-icon></span>
-                <input type="email" required>
+                <input type="text" th:field="*{email}" required>
                 <label for="email">Email</label>
             </div>
             <div class="input-box">
                 <span class="icon"><ion-icon name="lock-closed-outline"></ion-icon></span>
-                <input type="password" required>
+                <input type="password" th:field="*{password}" required>
                 <label for="password">Password</label>
             </div>
             <div class="forget-remember">
