--- a/src/TeachMeSkills/EnglishBook/src/main/resources/static/css/styles.css
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/static/css/styles.css
@@ -4,7 +4,7 @@ body{
     justify-content: center;
     align-content: center;
     min-height: 97.7vh;
-    background: url("static/images/library.jpg") no-repeat;
+    background: url("../images/library.jpg") no-repeat;
     background-size: cover;
 }
 li{
