--- a/src/TeachMeSkills/EnglishBook/src/main/resources/templates/login.html
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/templates/login.html
@@ -3,13 +3,13 @@
 <html lang="en"  xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Registration</title>
+    <title>Login</title>
 </head>
 <body style="background: url('/images/library.jpg') no-repeat center center; background-size: cover;">
 
 <div class="container">
     <h2>Login</h2>
-    <form th:action="@{/home/login}" th:object="${newLogin}" method="post">
+    <form th:action="@{/login}" th:object="${newLogin}" method="post">
         <div class="input-box"> <span class="icon"><ion-icon name="mail-outline"></ion-icon></span>
             <input type="text" th:field="*{email}" required>
             <label for="email">Email</label>
