--- a/src/TeachMeSkills/EnglishBook/src/main/resources/templates/home.html
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/templates/home.html
@@ -12,8 +12,8 @@
     <input type="checkbox" id="checkbox_toggle">
     <label for="checkbox_toggle" class="hamburger">&#9776</label>
     <nav class="navbar">
-        <a href="#">HomePage</a>
-        <a href="#">Library</a>
+        <a href="/home">HomePage</a>
+        <a th:href="@{/library}">Library</a>
         <a href="#">Contact</a>
         <button class="navbar-btn a">Login</button>
     </nav>
