--- a/src/TeachMeSkills/EnglishBook/src/main/resources/templates/library.html
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/templates/library.html
@@ -47,6 +47,32 @@
     </div>
   </div>
 </nav>
+<div class="container text-center">
+  <div class="row align-items-start">
+    <div class="col">
+      Name Book
+    </div>
+    <div class="col">
+      Name Author
+    </div>
+    <div class="col">
+      Description
+    </div>
+  </div>
+</div>
+<div class="container text-center">
+  <div class="row">
+    <div class="col order-last">
+      Book1
+    </div>
+    <div class="col">
+      Author1
+    </div>
+    <div class="col order-first">
+      Description1
+    </div>
+  </div>
+</div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
