--- a/src/TeachMeSkills/EnglishBook/src/main/resources/templates/library.html
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/templates/library.html
@@ -60,19 +60,21 @@
     </div>
   </div>
 </div>
+<form th:action="@{/library}" method="post" th:object="book">
 <div class="container text-center">
-  <div class="row">
+  <div class="row" th:each="book : ${books}">
     <div class="col order-last">
-      Book1
+      <td th:text="${book.name}"></td>
     </div>
     <div class="col">
-      Author1
+      <td th:text="${book.author}"></td>
     </div>
     <div class="col order-first">
-      Description1
+      <td th:text="${book.description}"></td>
     </div>
   </div>
 </div>
+</form>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
