--- a/src/TeachMeSkills/EnglishBook/src/main/resources/templates/library.html
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/templates/library.html
@@ -60,21 +60,19 @@
     </div>
   </div>
 </div>
-<form th:action="@{/library}" method="post" th:object="book">
 <div class="container text-center">
   <div class="row" th:each="book : ${books}">
     <div class="col order-last">
-      <td th:text="${book.name}"></td>
+      <p th:text="${book.nameBook}"></p>
     </div>
     <div class="col">
-      <td th:text="${book.author}"></td>
+      <p th:text="${book.nameAuthor}"></p>
     </div>
     <div class="col order-first">
-      <td th:text="${book.description}"></td>
+      <p th:text="${book.description}"></p>
     </div>
   </div>
 </div>
-</form>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
