--- a/src/TeachMeSkills/EnglishBook/src/main/resources/templates/library.html
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/templates/library.html
@@ -8,7 +8,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="@{css/libraryStyles.css}" rel="stylesheet">
 </head>
-<body>
+<body style="background: url('/images/library3.jpg') no-repeat center center; background-size: 100% 50%;">
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
@@ -61,15 +61,15 @@
   </div>
 </div>
 <div class="container text-center">
-  <div class="row" th:each="book : ${books}">
+  <div class="row"  th:each="book : ${books}">
     <div class="col order-last">
-      <p th:text="${book.nameBook}"></p>
+      <p th:text="${book.description}"></p>
     </div>
     <div class="col">
       <p th:text="${book.nameAuthor}"></p>
     </div>
     <div class="col order-first">
-      <p th:text="${book.description}"></p>
+      <p th:text="${book.nameBook}"></p>
     </div>
   </div>
 </div>
