--- a/src/TeachMeSkills/EnglishBook/src/main/resources/templates/library.html
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/templates/library.html
@@ -8,7 +8,8 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="@{css/libraryStyles.css}" rel="stylesheet">
 </head>
-<body style="background: url('/images/library3.jpg') no-repeat center center; background-size: 100% 50%;">
+<body style="background: grey">
+<!--<body style="background: url('/images/library3.jpg') no-repeat center center; background-size: 100% 50%;">-->
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
@@ -50,22 +51,23 @@
 <div class="container text-center">
   <div class="row align-items-start">
     <div class="col">
-      Name Book
+      <h1>Name Book</h1>
     </div>
     <div class="col">
-      Name Author
+      <h1>Name Author</h1>
     </div>
     <div class="col">
-      Description
+      <h1>Description</h1>
     </div>
   </div>
 </div>
 <div class="container text-center">
   <div class="row"  th:each="book : ${books}">
-    <div class="col order-last">
+    <div class="col order-three">
       <p th:text="${book.description}"></p>
+      </div>
     </div>
-    <div class="col">
+    <div class="col order-second">
       <p th:text="${book.nameAuthor}"></p>
     </div>
     <div class="col order-first">
