--- a/src/TeachMeSkills/EnglishBook/src/main/resources/templates/library.html
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/templates/library.html
@@ -8,7 +8,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="@{css/libraryStyles.css}" rel="stylesheet">
 </head>
-<body style="background: grey">
+<body style="background: #b4b3b3">
 <!--<body style="background: url('/images/library3.jpg') no-repeat center center; background-size: 100% 50%;">-->
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -28,11 +28,15 @@
             Genre
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">History</a></li>
-            <li><a class="dropdown-item" href="#">Horror</a></li>
-            <li><a class="dropdown-item" href="#">Adventures</a></li>
-            <li><a class="dropdown-item" href="#">Detective</a></li>
-            <li><a class="dropdown-item" href="#">Since</a></li>
+            <li><a class="dropdown-item" href="#">Fantasy</a></li>
+            <li><a class="dropdown-item" href="#">Psychological Fiction</a></li>
+            <li><a class="dropdown-item" href="#">Non-fiction </a></li>
+            <li><a class="dropdown-item" href="#">Romance </a></li>
+            <li><a class="dropdown-item" href="#">Novel in Verse</a></li>
+            <li><a class="dropdown-item" href="#">Comedy</a></li>
+            <li><a class="dropdown-item" href="#">Satire </a></li>
+            <li><a class="dropdown-item" href="#">Drama </a></li>
+            <li><a class="dropdown-item" href="#">Historical Fiction</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="/library">Show all books</a></li>
           </ul>
@@ -61,17 +65,17 @@
     </div>
   </div>
 </div>
+
 <div class="container text-center">
-  <div class="row"  th:each="book : ${books}">
-    <div class="col order-three">
-      <p th:text="${book.description}"></p>
-      </div>
+  <div class="row" th:each="book : ${books}">
+    <div class="col order-first">
+      <p th:text="${book?.nameBook}">Book Name</p>
     </div>
     <div class="col order-second">
-      <p th:text="${book.nameAuthor}"></p>
+      <p th:text="${book?.nameAuthor}">Author Name</p>
     </div>
-    <div class="col order-first">
-      <p th:text="${book.nameBook}"></p>
+    <div class="col order-three">
+      <p th:text="${book?.description}">Description</p>
     </div>
   </div>
 </div>
