--- a/src/TeachMeSkills/EnglishBook/src/main/resources/templates/library.html
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/templates/library.html
@@ -69,7 +69,7 @@
 <div class="container text-center">
   <div class="row" th:each="book : ${books}">
     <div class="col order-first">
-      <p th:text="${book?.nameBook}">Book Name</p>
+      <a th:href="@{/library/viewingBook/{id}(id=${book.id})}" th:text="${book?.nameBook}"> Book Name </a>
     </div>
     <div class="col order-second">
       <p th:text="${book?.nameAuthor}">Author Name</p>
