--- a/src/TeachMeSkills/EnglishBook/src/main/resources/templates/viewingBook.html
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/templates/viewingBook.html
@@ -9,24 +9,15 @@
 </head>
 <body style="background: #c5c3c3">
 
+<h1>Book Full Description</h1>
 
-    <div class="modal" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Modal title</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p>Modal body text goes here.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Add to favorites </button>
-                </div>
-            </div>
-        </div>
-    </div>
+<div th:if="${bookFullDescription != null}">
+    <h2 th:text="${bookFullDescription.name}">Book Name</h2>
+    <p th:text="${bookFullDescription.fullDescription}">Full Description</p>
+</div>
+<div th:if="${bookFullDescription == null}">
+    <p>No book description found for the given ID.</p>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
