--- a/src/TeachMeSkills/EnglishBook/src/main/resources/templates/viewingBook.html
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/templates/viewingBook.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en"  xmlns="http://www.w3.org/1999/html">
 <head>
@@ -7,19 +6,34 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body style="background: #c5c3c3">
+<body style="background: #c5c3c3" onload="openModal()">
 
-<h1>Book Full Description</h1>
-
-<div th:if="${bookFullDescription != null}">
-    <h2 th:text="${bookFullDescription.name}">Book Name</h2>
-    <p th:text="${bookFullDescription.fullDescription}">Full Description</p>
+<div class="card">
+    <div class="card-header">
+        About Book
+    </div>
+    <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <div th:if="${bookFullDescription != null}">
+            <h2 th:text="${bookFullDescription.name}">Book Name</h2>
+            <p th:text="${bookFullDescription.fullDescription}">Full Description</p>
+        </div>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
 </div>
-<div th:if="${bookFullDescription == null}">
-    <p>No book description found for the given ID.</p>
-</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<!--<div th:if="${bookFullDescription != null}">-->
+<!--    <h2 th:text="${bookFullDescription.name}">Book Name</h2>-->
+<!--    <p th:text="${bookFullDescription.fullDescription}">Full Description</p>-->
+<!--    &lt;!&ndash; Кнопка для открытия модального окна &ndash;&gt;-->
+<!--    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#bookModal">-->
+<!--        Show Full Description-->
+<!--    </button>-->
+<!--</div>-->
+<!--<div th:if="${bookFullDescription == null}">-->
+<!--    <p>No book description found for the given ID.</p>-->
+<!--</div>-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
