--- a/src/TeachMeSkills/EnglishBook/src/main/resources/templates/library.html
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/templates/library.html
@@ -28,7 +28,7 @@
             Genre
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Fantasy</a></li>
+            <li><a class="dropdown-item" th:href="@{/library/sortingGenre/{genre}(genre='Fantasy')}">Fantasy</a></li>
             <li><a class="dropdown-item" href="#">Psychological Fiction</a></li>
             <li><a class="dropdown-item" href="#">Non-fiction </a></li>
             <li><a class="dropdown-item" href="#">Romance </a></li>
