--- a/src/TeachMeSkills/EnglishBook/src/main/resources/templates/sortingGenre.html
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/templates/sortingGenre.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:ht="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
+
+    <title>Library</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Genre</title>
 </head>
 <body>
 
 <div class="container text-center">
-    <div class="row" th:each="book : ${books}">
+    <div class="row" th:each="book : ${genreBook}">
         <div class="col order-first">
-            <a th:href="@{/library/sortingGenre/{genre}(genre=${book.genre})}" th:text="${book?.nameBook}"> Book Name </a>
+            <a th:href="@{/library/viewingBook/{id}(id=${book.id})}" th:text="${book?.nameBook}"> Book Name </a>
         </div>
         <div class="col order-second">
             <p th:text="${book?.nameAuthor}">Author Name</p>
