--- a/src/TeachMeSkills/EnglishBook/src/main/resources/templates/home.html
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/templates/home.html
@@ -24,6 +24,7 @@
     <div class="formbox Login active" id="loginForm">
         <h2>Login</h2>
         <form th:action="@{/login}" th:object="${newLogin}" method="post">
+            <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
             <div class="input-box">
                 <span class="icon"><ion-icon name="mail-outline"></ion-icon></span>
                 <input type="email" th:field="*{email}" required>
@@ -33,6 +34,12 @@
                 <span class="icon"><ion-icon name="lock-closed-outline"></ion-icon></span>
                 <input type="password" th:field="*{password}" required>
                 <label for="password">Password</label>
+            </div>
+            <div th:if="${errorPassword}" class="error-message">
+                <p> Invalid password</p>
+            </div>
+            <div th:if="${errorEmail}" class="error-message">
+                <p>Invalid email</p>
             </div>
             <div class="forget-remember">
                 <label for=""><input type="checkbox"> Remember me</label>
